[gd_scene load_steps=15 format=3 uid="uid://xsgo37awvtji"]

[ext_resource type="Script" path="res://RDE_Scripts/Local_Scripts/Cutscenes/Specific Cutscene/rgt_true_outro.gd" id="1_uuhfg"]
[ext_resource type="AudioStream" uid="uid://b38l1m5ocm3n0" path="res://RDE_Audio/UI Sounds/Mini Crunch/click_02.wav" id="2_4h46l"]
[ext_resource type="PackedScene" uid="uid://dr6fmxbctycup" path="res://RDE_Scenes/Cutscenes/textbox.tscn" id="3_pjtso"]
[ext_resource type="PackedScene" uid="uid://c6yyfqodhydb5" path="res://RDE_Scenes/Cutscenes/cscene_key_hint.tscn" id="4_nr3dg"]
[ext_resource type="Texture2D" uid="uid://pqj8avqrkuop" path="res://RDE_Images/RDE_Logo2.png" id="5_p5ayw"]
[ext_resource type="Texture2D" uid="uid://0hgp27qde0sh" path="res://RDE_Images/oswald1.png" id="5_rgnvt"]
[ext_resource type="Texture2D" uid="uid://dq1u0bk36p7ji" path="res://RDE_Images/rt_ringtail3.png" id="6_isdeg"]
[ext_resource type="AudioStream" uid="uid://cog6cst52ldfj" path="res://RDE_Audio/bbc_wind-atmos_nhu9295991.mp3" id="7_frke3"]
[ext_resource type="Texture2D" uid="uid://1xhvfr7gk6ks" path="res://RDE_Images/darius nefarions.png" id="8_ywd4c"]
[ext_resource type="Texture2D" uid="uid://chmvv8ffojpf8" path="res://RDE_Images/obignale nefarions.png" id="9_hxoix"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_rtgcw"]
cull_mode = 1
polygon = PackedVector2Array(185.312, 87.2737, 197.36, -93.4484, 156.626, -210.842, 113.023, -286.219, 66.2648, -331.324, 10.6143, -358.507, -36.1444, -349.396, -73.7227, -328.387, -138.554, -204.818, -182.156, -69.3521, -168.674, 60.2407, -127.939, 153.538, -97.819, 183.659, -115.891, 213.779, -152.036, 213.779, -180.722, 349.396, -61.6746, 358.357, -43.6024, 195.707, -7.45789, 111.37, 22.6624, 111.37, 52.7828, 183.659, 70.855, 286.068, 155.192, 280.044, 167.24, 213.779, 106.999, 189.683, 94.9513, 147.514, 106.999, 117.394, 125.072, 141.49)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_j0d21"]
cull_mode = 1
polygon = PackedVector2Array(-75.2546, -62.8711, -106.651, 12.4801, -87.8132, 37.5972, -75.2546, 106.669, -75.2546, 150.624, -94.0925, 194.579, -125.489, 219.696, -188.282, 238.534, -263.633, 225.975, -295.029, 251.093, -238.516, 295.047, -219.678, 339.002, 18.9344, 357.84, 106.844, 295.047, 169.637, 301.327, 175.916, 269.93, 138.241, 232.255, 144.52, 144.345, 194.754, 100.39, 213.592, 68.9935, 244.988, 56.4351, 238.709, 18.7594, 175.916, -62.8711, 150.799, -113.105, 125.682, -138.222, 119.403, -175.898, 144.52, -188.457, 157.078, -213.574, 144.52, -326.601, 106.844, -364.276, 31.493, -345.438, 6.37592, -288.925, -6.18268, -226.132, 18.9344, -175.898, 25.2137, -138.222, -25.0204, -81.709)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ni360"]
cull_mode = 1
polygon = PackedVector2Array(0, 20, 8, 19, 15, 15, 20, 8, 22, 0, 20, -8, 15, -16, 8, -21, 0, -22, -9, -20, -15, -16, -20, -8, -21, 0, -19, 8, -14, 15, -8, 19)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_ci2a2"]
cull_mode = 1
polygon = PackedVector2Array(-1.03359, 22.2222, 6.20155, 23.2558, 14.4703, 22.739, 22.739, 18.0879, 26.3566, 14.9871, 29.9742, 8.78553, 31.0078, 2.06718, 30.491, -3.10078, 26.3566, -10.3359, 20.6718, -18.0879, 11.3695, -22.739, 0, -22, -9, -20, -12.9199, -16.5375, -17.0543, -10.3359, -20.155, -4.13437, -19.6382, 3.61757, -17.5711, 9.81912, -14, 15, -8, 19)

[node name="RGT_TRUE_OUTRO" type="Node2D" node_paths=PackedStringArray("textbox_scene", "key_hint_scene")]
script = ExtResource("1_uuhfg")
end_index = 90
textbox_scene = NodePath("Textbox")
key_hint_scene = NodePath("cscene_key_hint")
continue_sound = ExtResource("2_4h46l")

[node name="ControlContainer" type="CanvasLayer" parent="."]

[node name="BlackOverlay" type="ColorRect" parent="ControlContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="WhiteOverlay" type="ColorRect" parent="ControlContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="RDE_Title" type="TextureRect" parent="ControlContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -376.5
offset_top = -160.0
offset_right = 376.5
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_p5ayw")

[node name="Textbox" parent="." instance=ExtResource("3_pjtso")]

[node name="cscene_key_hint" parent="." instance=ExtResource("4_nr3dg")]

[node name="ActorContainer" type="Node" parent="."]

[node name="Obignale" type="Sprite2D" parent="ActorContainer"]
position = Vector2(-113.762, -206.488)
scale = Vector2(0.184445, 0.184445)
texture = ExtResource("9_hxoix")
flip_h = true

[node name="LightOccluder2D2" type="LightOccluder2D" parent="ActorContainer/Obignale"]
scale = Vector2(0.9, 0.9)
occluder = SubResource("OccluderPolygon2D_rtgcw")

[node name="Darius" type="Sprite2D" parent="ActorContainer"]
position = Vector2(117.985, -204.988)
scale = Vector2(0.176949, 0.176949)
texture = ExtResource("8_ywd4c")

[node name="LightOccluder2D3" type="LightOccluder2D" parent="ActorContainer/Darius"]
scale = Vector2(0.9, 0.9)
occluder = SubResource("OccluderPolygon2D_j0d21")

[node name="Oswald" type="Sprite2D" parent="ActorContainer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(620, 340)
rotation = -1.5708
texture = ExtResource("5_rgnvt")

[node name="LightOccluder2D2" type="LightOccluder2D" parent="ActorContainer/Oswald"]
scale = Vector2(0.9, 0.9)
occluder = SubResource("OccluderPolygon2D_ni360")

[node name="Ringtail" type="Sprite2D" parent="ActorContainer"]
modulate = Color(1, 1, 1, 0)
position = Vector2(620, 340)
texture = ExtResource("6_isdeg")
flip_v = true

[node name="LightOccluder2D4" type="LightOccluder2D" parent="ActorContainer/Ringtail"]
modulate = Color(1, 1, 1, 0.196078)
scale = Vector2(1.8, 1.8)
occluder = SubResource("OccluderPolygon2D_ci2a2")

[node name="AmbianceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_frke3")
volume_db = -10.0
autoplay = true
bus = &"CScene Bus"
